--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,12 +11,13 @@ on:
 jobs:
   ci-linux:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: example
     steps:
     - uses: actions/checkout@v4
     - name: build nob
-      run: |
-        cd example
-        cc -o nob nob.c -Wall -Wextra -Wpedantic
+      run: cc -o nob nob.c -Wall -Wextra -Wpedantic
     - name: build example
       run: ./nob
     - name: run example
@@ -24,13 +25,14 @@ jobs:
 
   ci-windows:
     runs-on: windows-latest
+    defaults:
+      run:
+        working-directory: example
     steps:
     - uses: actions/checkout@v4
     - name: build nob
       shell: cmd
-      run: |
-        cd example
-        clang -o nob.exe nob.c -Wall -Wextra -Wpedantic -D_CRT_SECURE_NO_WARNINGS
+      run: clang -o nob.exe nob.c -Wall -Wextra -Wpedantic -D_CRT_SECURE_NO_WARNINGS
     - name: build example
       shell: cmd
       run: |
@@ -42,12 +44,13 @@ jobs:
 
   ci-macos:
     runs-on: macos-latest
+    defaults:
+      run:
+        working-directory: example
     steps:
     - uses: actions/checkout@v4
     - name: build nob
-      run: |
-        cd example
-        cc -o nob nob.c -Wall -Wextra -Wpedantic
+      run: cc -o nob nob.c -Wall -Wextra -Wpedantic
     - name: build example
       run: ./nob
     - name: run example
