--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,9 @@ jobs:
           compiler: { name: c++ }
 
     runs-on: ${{ matrix.os }}
+    defaults:
+      run:
+        working-directory: example
     steps:
     - uses: actions/checkout@v4
     - name: build nob
@@ -51,7 +54,7 @@ jobs:
       run: ${{ matrix.compiler.name }} -o ${{ matrix.build }} ${{ matrix.build }}.c -std=${{ matrix.compiler.std }} -Wall -Wextra -Wpedantic -g3 -fsanitize=address,undefined
     - name: run nob
       shell: bash
-      run: ./${{ matrix.build }}
+      run: CC=${{ matrix.compiler.name }} ./${{ matrix.build }}
     - name: run example
       shell: bash
       run: ./example/build/example
