--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         - name: clang++
           std: c++20
         build:
-        - example/nob
+        - nob
         exclude:
         - os: ubuntu-latest
           compiler: { name: c++ }
