--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,4 +57,4 @@ jobs:
       run: CC=${{ matrix.compiler.name }} ./${{ matrix.build }}
     - name: run example
       shell: bash
-      run: ./example/build/example
+      run: ./build/example
