--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
       run: ${{ matrix.compiler.name }} -o ${{ matrix.build }} ${{ matrix.build }}.c -std=${{ matrix.compiler.std }} -Wall -Wextra -Wpedantic -g3 -fsanitize=address,undefined
     - name: run nob
       shell: bash
-      run: CC=${{ matrix.compiler.name }} ./${{ matrix.build }}
+      run: ./${{ matrix.build }}
     - name: run example
       shell: bash
       run: ./build/example
