--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,37 +13,27 @@ jobs:
     strategy:
       matrix:
         os:
-        - ubuntu-latest
-        - macos-latest
-        - windows-latest
-        compiler:
-        - name: cc
+        - name: ubuntu-latest
+          compiler: cc
           std: c99
-        - name: c++
-          std: c++20
-        - name: clang
+        - name: macos-latest
+          compiler: cc
           std: c99
-        - name: clang++
+        - name: macos-latest
+          compiler: c++
           std: c++20
+        - name: windows-latest
+          compiler: clang
+          std: c99
+          env: CC=clang
+        - name: windows-latest
+          compiler: clang++
+          std: c++20
+          env: CC=clang
         build:
         - nob
-        exclude:
-        - os: ubuntu-latest
-          compiler: { name: c++ }
-        - os: ubuntu-latest
-          compiler: { name: clang }
-        - os: ubuntu-latest
-          compiler: { name: clang++ }
-        - os: macos-latest
-          compiler: { name: clang }
-        - os: macos-latest
-          compiler: { name: clang++ }
-        - os: windows-latest
-          compiler: { name: cc }
-        - os: windows-latest
-          compiler: { name: c++ }
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os.name }}
     defaults:
       run:
         working-directory: example
@@ -51,7 +41,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: build nob
       shell: bash
-      run: ${{ matrix.compiler.name }} -o ${{ matrix.build }} ${{ matrix.build }}.c -std=${{ matrix.compiler.std }} -Wall -Wextra -Wpedantic -g3 -fsanitize=address,undefined
+      run: ${{ matrix.os.compiler }} -o ${{ matrix.build }} ${{ matrix.build }}.c -std=${{ matrix.os.std }} -Wall -Wextra -Wpedantic -g3 -fsanitize=address,undefined
     - name: run nob
       shell: bash
       run: ./${{ matrix.build }}
