--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,12 @@ jobs:
           compiler: clang
           std: c99
           env: CC=clang
+          define: -D_CRT_SECURE_NO_WARNINGS
         - name: windows-latest
           compiler: clang++
           std: c++20
           env: CC=clang
+          define: -D_CRT_SECURE_NO_WARNINGS
         build:
         - nob
 
@@ -41,7 +43,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: build nob
       shell: bash
-      run: ${{ matrix.os.compiler }} -o ${{ matrix.build }} ${{ matrix.build }}.c -std=${{ matrix.os.std }} -Wall -Wextra -Wpedantic -g3 -fsanitize=address,undefined
+      run: ${{ matrix.os.compiler }} -o ${{ matrix.build }} ${{ matrix.build }}.c -std=${{ matrix.os.std }} -Wall -Wextra -Wpedantic -g3 -fsanitize=address,undefined ${{ matrix.os.define }}
     - name: run nob
       shell: bash
       run: ${{ matrix.os.env }} ./${{ matrix.build }}
