--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,54 +9,44 @@ on:
     - master
 
 jobs:
-  ci-linux:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: example
-    steps:
-    - uses: actions/checkout@v4
-    - name: build nob
-      run: |
-        cc -o nob nob.c -Wall -Wextra -Wpedantic -std=c99
-    - name: build example
-      run: ./nob
-    - name: run example
-      run: ./build/example
+  build:
+    strategy:
+      matrix:
+        os:
+        - name: ubuntu-latest
+          compiler: cc
+          std: c99
+        - name: macos-latest
+          compiler: cc
+          std: c99
+        - name: macos-latest
+          compiler: c++
+          std: c++20
+        - name: windows-latest
+          compiler: clang
+          std: c99
+          env: CC=clang
+          define: -D_CRT_SECURE_NO_WARNINGS
+        - name: windows-latest
+          compiler: clang++
+          std: c++20
+          env: CC=clang
+          define: -D_CRT_SECURE_NO_WARNINGS
+        build:
+        - nob
 
-  ci-windows:
-    runs-on: windows-latest
+    runs-on: ${{ matrix.os.name }}
     defaults:
       run:
         working-directory: example
     steps:
     - uses: actions/checkout@v4
     - name: build nob
-      shell: cmd
-      run: |
-        clang++ -o nob.exe nob.c -std=c++20 -D_CRT_SECURE_NO_WARNINGS
-        clang -o nob.exe nob.c -Wall -Wextra -Wpedantic -std=c90 -D_CRT_SECURE_NO_WARNINGS
-    - name: build example
-      shell: cmd
-      run: |
-        set CC=clang
-        nob.exe
+      shell: bash
+      run: ${{ matrix.os.compiler }} -o ${{ matrix.build }} ${{ matrix.build }}.c -std=${{ matrix.os.std }} -Wall -Wextra -Wpedantic -g3 -fsanitize=address,undefined ${{ matrix.os.define }}
+    - name: run nob
+      shell: bash
+      run: ${{ matrix.os.env }} ./${{ matrix.build }}
     - name: run example
-      shell: cmd
-      run: call "build/example.exe"
-
-  ci-macos:
-    runs-on: macos-latest
-    defaults:
-      run:
-        working-directory: example
-    steps:
-    - uses: actions/checkout@v4
-    - name: build nob
-      run: |
-        c++ -o nob nob.c -std=c++20
-        cc -o nob nob.c -Wall -Wextra -Wpedantic -std=c99
-    - name: build example
-      run: ./nob
-    - name: run example
+      shell: bash
       run: ./build/example
