--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,12 +23,12 @@ jobs:
         - name: windows-latest
           compiler: clang
           std: c99
-          env: CC=clang
+          env: env CC=clang
           define: -D_CRT_SECURE_NO_WARNINGS
         - name: windows-latest
           compiler: clang++
           std: c++20
-          env: CC=clang
+          env: env CC=clang
           define: -D_CRT_SECURE_NO_WARNINGS
         build:
         - nob
