--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         pwd
         ls
-        exec ./nob
+        exec nob
     - name: run example
       shell: bash
       run: ./build/example
