--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,11 +29,7 @@ jobs:
       shell: bash
       run: ${{ matrix.os.compiler }} -o ${{ matrix.build }} ${{ matrix.build }}.c -std=${{ matrix.os.std }} -Wall -Wextra -Wpedantic -g3 -fsanitize=address,undefined ${{ matrix.os.define }}
     - name: run nob
-      shell: bash
-      run: |
-        pwd
-        ls
-        exec $(pwd)/nob
+      run: call nob
     - name: run example
       shell: bash
       run: ./build/example
