--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,6 @@ jobs:
       run: start nob
     - name: run example
       shell: bash
-      run: ./build/example
+      run: |
+        ls build
+        ./build/example
