--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,23 @@ jobs:
     strategy:
       matrix:
         os:
-        - name: windows-latest
+        - name: ubuntu-latest
+          compiler: cc
+          std: c99
+        - name: macos-latest
+          compiler: cc
+          std: c99
+        - name: macos-latest
+          compiler: c++
+          std: c++20
+        - name: windows-2022
           compiler: clang
           std: c99
+          env: CC=clang
+          define: -D_CRT_SECURE_NO_WARNINGS
+        - name: windows-2022
+          compiler: clang++
+          std: c++20
           env: CC=clang
           define: -D_CRT_SECURE_NO_WARNINGS
         build:
@@ -29,10 +43,8 @@ jobs:
       shell: bash
       run: ${{ matrix.os.compiler }} -o ${{ matrix.build }} ${{ matrix.build }}.c -std=${{ matrix.os.std }} -Wall -Wextra -Wpedantic -g3 -fsanitize=address,undefined ${{ matrix.os.define }}
     - name: run nob
-      shell: cmd
-      run: start nob
+      shell: bash
+      run: ${{ matrix.os.env }} ./${{ matrix.build }}
     - name: run example
       shell: bash
-      run: |
-        ls
-        ./build/example
+      run: ./build/example
