--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,12 +20,12 @@ jobs:
         - name: macos-latest
           compiler: c++
           std: c++20
-        - name: windows-2022
+        - name: windows-latest
           compiler: clang
           std: c99
           env: CC=clang
           define: -D_CRT_SECURE_NO_WARNINGS
-        - name: windows-2022
+        - name: windows-latest
           compiler: clang++
           std: c++20
           env: CC=clang
@@ -44,7 +44,10 @@ jobs:
       run: ${{ matrix.os.compiler }} -o ${{ matrix.build }} ${{ matrix.build }}.c -std=${{ matrix.os.std }} -Wall -Wextra -Wpedantic -g3 -fsanitize=address,undefined ${{ matrix.os.define }}
     - name: run nob
       shell: bash
-      run: ${{ matrix.os.env }} ./${{ matrix.build }}
+      run: |
+        ls
+        ldd nob
+        ${{ matrix.os.env }} ./${{ matrix.build }}
     - name: run example
       shell: bash
       run: ./build/example
