--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,16 +11,30 @@ jobs:
     strategy:
       matrix:
         os:
+        - name: ubuntu-latest
+          compiler: cc
+          std: c99
+          sanitize: address,undefined
+        - name: macos-latest
+          compiler: cc
+          std: c99
+          sanitize: address,undefined
+        - name: macos-latest
+          compiler: c++
+          std: c++20
+          sanitize: address,undefined
         - name: windows-latest
           compiler: clang
           std: c99
           env: CC=clang
-          define: -D_CRT_SECURE_NO_WARNINGS -DUSE_SANITIZERS=OFF
+          define: -D_CRT_SECURE_NO_WARNINGS
+          sanitize: undefined
         - name: windows-latest
           compiler: clang++
           std: c++20
           env: CC=clang
-          define: -D_CRT_SECURE_NO_WARNINGS -DUSE_SANITIZERS=OFF
+          define: -D_CRT_SECURE_NO_WARNINGS
+          sanitize: undefined
         build:
         - nob
 
@@ -32,13 +46,10 @@ jobs:
     - uses: actions/checkout@v4
     - name: build nob
       shell: bash
-      run: ${{ matrix.os.compiler }} -o ${{ matrix.build }} ${{ matrix.build }}.c -std=${{ matrix.os.std }} -Wall -Wextra -Wpedantic -g3 -fsanitize=address,undefined ${{ matrix.os.define }}
+      run: ${{ matrix.os.compiler }} -o ${{ matrix.build }} ${{ matrix.build }}.c -std=${{ matrix.os.std }} -Wall -Wextra -Wpedantic -g3 -fsanitize=${{ matrix.os.sanitize }} ${{ matrix.os.define }}
     - name: run nob
       shell: bash
-      run: |
-        ls
-        ldd nob
-        ${{ matrix.os.env }} ./${{ matrix.build }}
+      run: ${{ matrix.os.env }} ./${{ matrix.build }}
     - name: run example
       shell: bash
       run: ./build/example
