--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,27 +14,25 @@ jobs:
         - name: ubuntu-latest
           compiler: cc
           std: c99
-          sanitize: address,undefined
+          sanitize: -g3 -fsanitize=address,undefined
         - name: macos-latest
           compiler: cc
           std: c99
-          sanitize: address,undefined
+          sanitize: -g3 -fsanitize=address,undefined
         - name: macos-latest
           compiler: c++
           std: c++20
-          sanitize: address,undefined
+          sanitize: -g3 -fsanitize=address,undefined
         - name: windows-latest
           compiler: clang
           std: c99
           env: CC=clang
           define: -D_CRT_SECURE_NO_WARNINGS
-          sanitize: undefined
         - name: windows-latest
           compiler: clang++
           std: c++20
           env: CC=clang
           define: -D_CRT_SECURE_NO_WARNINGS
-          sanitize: undefined
         build:
         - nob
 
@@ -46,7 +44,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: build nob
       shell: bash
-      run: ${{ matrix.os.compiler }} -o ${{ matrix.build }} ${{ matrix.build }}.c -std=${{ matrix.os.std }} -Wall -Wextra -Wpedantic -g3 -fsanitize=${{ matrix.os.sanitize }} ${{ matrix.os.define }}
+      run: ${{ matrix.os.compiler }} -o ${{ matrix.build }} ${{ matrix.build }}.c -std=${{ matrix.os.std }} -Wall -Wextra -Wpedantic ${{ matrix.os.sanitize }} ${{ matrix.os.define }}
     - name: run nob
       shell: bash
       run: ${{ matrix.os.env }} ./${{ matrix.build }}
